SOHO-5523 - Fixed lookup icon was not aligning in edit mode with short row-height Datagrid

--- a/sass/controls/_datagrid.scss
+++ b/sass/controls/_datagrid.scss
@@ -559,6 +559,10 @@ $datagrid-short-row-height: 23px;
             padding: 2px 20px;
           }
 
+          .lookup-wrapper .trigger {
+            top: -7px;
+          }
+
         }
         // scss-lint:enable NestingDepth
 
